# clicky-desktop

./: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  linux-overlay-dock.md  release-0-1.md
.github/workflows/: ci.yml  release.yml
assets/: clicky-desktop.desktop  icon.icns
docs/release/: 0.1-checklist.md
scripts/: package-linux.sh  package-windows.sh
src/: main.rs
src/api/: assemblyai.rs  claude.rs  computer_use.rs  elevenlabs.rs  mod.rs  openai.rs
src/app/: mod.rs  platform.rs  state_machine.rs
src/audio/: capture.rs  mod.rs  playback.rs
src/autostart/: mod.rs
src/config/: mod.rs
src/core/: audio_rms.rs  bezier_flight.rs  bubble_text.rs  conversation.rs  coordinate_mapper.rs  design_system.rs  mod.rs  pcm16_converter.rs  point_parser.rs  wav_builder.rs
src/cursor_tracker/: evdev_tracker.rs  fallback.rs  mod.rs  win32_tracker.rs
src/hotkey/: evdev_hotkey.rs  global_hotkey_backend.rs  mod.rs
src/overlay/: renderer.rs
src/panel/: mod.rs
src/runtime/: mod.rs
src/screenshot/: mod.rs
src/tray/: mod.rs
