[package]
name = "clicky-desktop"
version = "0.1.0"
edition = "2021"
description = "Cross-platform AI companion with voice input, screen capture, and cursor overlay"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
reqwest-eventsource = "0.6"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
cpal = "0.15"
rodio = { version = "0.20", default-features = false, features = ["mp3"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "6"
rubato = "0.16"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
dotenvy = "0.15"
xcap = "0.9"
raylib = { version = "5", features = ["opengl_21"] }
tray-icon = "0.19"
global-hotkey = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
x11rb = { version = "0.13", features = ["xfixes"] }
gtk = "0.18"

[target.'cfg(not(target_os = "windows"))'.dependencies]
eframe = "0.31"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52"
